clang/test/BSC/Negative/OwnedStruct/partially_moved/destuctor_partially_moved_field_val/destuctor_partially_moved_field_val.cbs
// RUN: %clang_cc1 -verify %s

owned struct Weak {};

owned struct W {
public:
	Weak p;
};

void test() {
    Weak weak = { };
	W w1 = { .p = weak };  
	W w2 = { .p = w1.p };  
} //expected-error {{partially moved owned struct:`w1` at scope end, w1.p is moved}}
